feat: adaptacion of responsiv

--- a/index.html
+++ b/index.html
@@ -33,9 +33,10 @@
 
     <section class="home" id="home">
 
-        <div class="home-img">
-            <img src="assets/perfil.png" alt="Picture from perfil">
-        </div>
+        
+        <picture class="home-img">
+            <img class="personal-img" src="assets/perfil.png" alt="Picture from perfil">
+        </picture>
 
         <div class="home-content">
             <h3>Hi ✋🏽</h3>
