--- a/index.html
+++ b/index.html
@@ -6,16 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio | Pedro Alves</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="shortcut icon" type="image/png" href="/assets/icon.png"/>
+    <link rel="stylesheet" href="css/toggle.css">
+    <link rel="shortcut icon" type="image/png" href="/assets/icon.png" />
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 
 <body>
     <header class="header-container">
+
+
         <div class="logo-img">
-        <a href="#home" class="logo">Pedro
-            <span>Alves</span>
-        </a>
+            <a href="#home" class="logo">Pedro
+                <span>Alves</span>
+            </a>
         </div>
 
         <i class='bx bx-menu' id="menu-icon"></i>
@@ -28,11 +31,15 @@
             <a href="#education">Education</a>
             <a href="#contact">Contact</a>
         </nav>
+
+        <i class='bx bxs-sun' style='color:#ffe80c; font-size: 24px; cursor: pointer;' id="iconSun"></i>
+        <i class='bx bxs-moon ' style='color:#3f3f5c; font-size: 24px; cursor: pointer;' id="iconMoon" ></i>
+
     </header>
 
     <section class="home" id="home">
 
-        
+
         <picture class="home-img">
             <img class="personal-img" src="assets/perfil.png" alt="Picture from perfil">
         </picture>
@@ -52,8 +59,10 @@
             </p>
 
             <div class="social-icons">
-                <a href="https://www.linkedin.com/in/pedro-alvess/" target="_blank"><i class='bx bxl-linkedin-square'></i></a>
-                <a href="https://www.instagram.com/pedroszalves/" target="_blank"><i class='bx bxl-instagram-alt'></i></a>
+                <a href="https://www.linkedin.com/in/pedro-alvess/" target="_blank"><i
+                        class='bx bxl-linkedin-square'></i></a>
+                <a href="https://www.instagram.com/pedroszalves/" target="_blank"><i
+                        class='bx bxl-instagram-alt'></i></a>
                 <a href="https://twitter.com/Pedropasaa" target="_blank"><i class='bx bxl-twitter'></i></a>
                 <a href="https://github.com/Souzaa1" target="_blank"><i class='bx bxl-github'></i></a>
 
@@ -293,9 +302,9 @@
                 <input type="text" placeholder="Phone Number">
                 <input type="text" placeholder="Subject">
             </div>
-            
-                <textarea name="" id="" cols="30" rows="10" placeholder="Your Menssage"></textarea>
-                <input type="submit" value="Send Menssage" class="btn">
+
+            <textarea name="" id="" cols="30" rows="10" placeholder="Your Menssage"></textarea>
+            <input type="submit" value="Send Menssage" class="btn">
         </form>
 
     </section>
