feat: add light theme

--- a/index.html
+++ b/index.html
@@ -32,13 +32,11 @@
             <a href="#contact">Contact</a>
         </nav>
 
-        <i class='bx bxs-sun' style='color:#ffe80c; font-size: 24px; cursor: pointer;' id="iconSun"></i>
-        <i class='bx bxs-moon ' style='color:#3f3f5c; font-size: 24px; cursor: pointer;' id="iconMoon" ></i>
+        <i class='bx bxs-sun bx-spin bx-rotate-270' style='color:#ffe80c; font-size: 24px; cursor: pointer;' id="iconSun"></i>
+        <i class='bx bxs-moon  bx-tada' style='color:#3f3f5c; font-size: 24px; cursor: pointer;' id="iconMoon" ></i>
 
     </header>
-
     <section class="home" id="home">
-
 
         <picture class="home-img">
             <img class="personal-img" src="assets/perfil.png" alt="Picture from perfil">
