"Feat: add my new project"

--- a/index.html
+++ b/index.html
@@ -117,18 +117,17 @@
         <div class="projects-container">
 
             <div class="projects-box">
-                <img src="assets/clock.png" alt="">
+                <img src="assets/auth.png" alt="">
                 <div class="projects-info">
-                    <h4>Digital Clock</h4>
+                    <h4>Auth Authentication</h4>
                     <p>
-                        This digital clock project, created using HTML and CSS, features a sleek design displaying
-                        hours,
-                        minutes,
-                        and seconds. Utilizing CSS animations, the digits smoothly transition with each time update,
-                        enhancing visual appeal. The minimalist interface ensures clear time representation, making
-                        it both functional and aesthetically pleasing.
+                        Next Auth v5 - Advanced Guide (2024) offers extensive authentication features using Next-auth 
+                        v5 and Next.js 14. Key components include login, registration, and password recovery. 
+                        It supports social logins via Google & GitHub, email verification, and two-factor authentication. 
+                        User roles, admin-only access, and customizable settings enhance security. 
+                        This project streamlines authentication implementation in Next.js applications.
                     </p>
-                    <a href="https://github.com/Souzaa1/relogio_digital"><i class='bx bx-link-alt'></i></a>
+                    <a href="https://auth-screen.vercel.app"><i class='bx bx-link-alt'></i></a>
                 </div>
             </div>
 
